grammar.js
    toplevel: ($) => repeat($._toplevel),
    _toplevel: ($) =>
      choice(
        $.operation,
        $.attribute_alias_def,
        $.type_alias_def,
        $.external_resources,
      ),
    integer_literal: ($) => choice($._decimal_literal, $._hexadecimal_literal),
    _decimal_literal: ($) => token(seq(optional(/[-+]/), repeat1(/[0-9]/))),
    _hexadecimal_literal: ($) => token(seq("0x", repeat1(/[0-9a-fA-F]/))),
    float_literal: ($) =>
      token(
        seq(
          optional(/[-+]/),
          repeat1(/[0-9]/),
          ".",
          repeat(/[0-9]/),
          optional(seq(/[eE]/, optional(/[-+]/), repeat1(/[0-9]/))),
        ),
      ),
    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            // Keep a leading `//` inside the string instead of letting the
            // comment extra win the lexical tie and consume outer syntax.
            token(prec(1, /[^\\"\n\f\v\r]+/)),
            $.escape_sequence,
            $.invalid_escape,
          ),
        ),
        '"',
      ),
    complex_literal: ($) =>
      seq(
        "(",
        choice($.integer_literal, $.float_literal, $.bool_literal),
        ",",
        choice($.integer_literal, $.float_literal, $.bool_literal),
        ")",
      ),
    tensor_literal: ($) =>
      seq(
        choice($._dense_keyword, $._sparse_keyword),
        "<",
        optional(
          seq(
            optional(seq($.type, ":")),
            seq(
              $._tensor_literal_element,
              repeat(seq(",", $._tensor_literal_element)),
            ),
          ),
        ),
        ">",
      ),
    _tensor_literal_element: ($) =>
      choice($.nested_idx_list, $._primitive_element),
    array_literal: ($) =>
      seq(token("array"), "<", $.type, optional(seq(":", $._idx_list)), ">"),
    nested_idx_list: ($) =>
      seq(
        "[",
        optional(choice($.nested_idx_list, $._idx_list)),
        repeat(seq(",", $.nested_idx_list)),
        "]",
      ),
    _idx_list: ($) =>
      prec.right(
        seq($._primitive_element, repeat(seq(",", $._primitive_element))),
      ),
    bare_id: ($) => token(seq(/[a-zA-Z_]/, repeat(/[a-zA-Z0-9_$.]/))),
    _alias_or_dialect_id: ($) =>
      token(seq(/[a-zA-Z_]/, repeat(/[a-zA-Z0-9_$]/))),
    value_use: ($) => seq("%", $._suffix_id),
    _suffix_id: ($) =>
      token(
        seq(
          choice(
            repeat1(/[0-9]/),
            seq(/[a-zA-Z_$.-]/, repeat(/[a-zA-Z0-9_$.-]/)),
          ),
          optional(seq(choice(":", "#"), repeat1(/[0-9]/))),
        ),
      ),
    symbol_ref_id: ($) =>
      seq(
        "@",
        choice($._suffix_id, $.string_literal),
        optional(seq("::", $.symbol_ref_id)),
      ),
    operation: ($) =>
      seq(
        field("lhs", optional($._op_result_list)),
        field("rhs", choice($.generic_operation, $.custom_operation)),
        field("location", optional($.trailing_location)),
      ),

    // The scanner emits _generic_op_name for a line-start quoted name followed
    // by a generic operand list, so a custom body before it cannot absorb the
    // operation. Other positions keep the ordinary string_literal.
    generic_operation: ($) =>
      seq(
        choice(alias($._generic_op_name, $.string_literal), $.string_literal),
        $._value_use_list_parens,
        optional($._successor_list),
        optional($.properties),
        optional($._region_list),
        optional($.attribute),
        ":",
        $.function_type,
      ),

    _op_result_list: ($) =>
      seq($.op_result, repeat(seq(",", $.op_result)), "="),
    // The scanner emits _op_result_value for a line-start `%name` that begins
    // an op-result-list, so a custom body before it cannot absorb the binding.
    // Other positions (same line, later results) keep the ordinary value_use.
    op_result: ($) =>
      seq(
        choice(alias($._op_result_value, $.value_use), $.value_use),
        optional(seq(":", $.integer_literal)),
      ),
    _successor_list: ($) =>
      seq("[", $.successor, repeat(seq(",", $.successor)), "]"),
    _region_list: ($) => seq("(", $.region, repeat(seq(",", $.region)), ")"),
    dictionary_attribute: ($) =>
      seq(
        "{",
        optional($.attribute_entry),
        repeat(seq(",", $.attribute_entry)),
        "}",
      ),
    custom_operation: ($) =>
      choice($._tier1_custom_operation, $._tier2_custom_operation),

    _tier1_custom_operation: ($) =>
      choice(
        prec(2, $.func_operation),
        prec(2, $.module_operation),
        prec(2, $._affine_for_operation),
      ),

    _tier2_custom_operation: ($) =>
      choice(
        $._pdl_interp_record_match_operation,
        $._generic_custom_operation_with_location_attr_dict,
        $._generic_custom_operation,
      ),

    // Tier 1: Function operations (func.func, llvm.func)
    // Token prec 20 ensures these keywords win over _dotted_op_name (prec 10)
    func_operation: ($) =>
      prec.right(
        choice(
          seq(
            field("name", token(prec(20, "func.func"))),
            // MLIR function syntax parses public/private/nested before the
            // symbol as sym_visibility.
            field(
              "visibility",
              optional(choice("public", "private", "nested")),
            ),
            field("sym_name", $.symbol_ref_id),
            field("arguments", $.func_arg_list),
            field("return", optional($.func_return)),
            field(
              "attributes",
              optional(
                seq(optional(token("attributes")), $.dictionary_attribute),
              ),
            ),
            field("body", optional($.region)),
          ),
          seq(
            field("name", token(prec(20, "llvm.func"))),
            // LLVM function syntax parses linkage, LLVM visibility,
            // unnamed_addr, and calling-convention keywords before the symbol.
            // Keep this broad: MLIR's CConv enum alone has ~50 keywords, and
            // the trailing @symbol is an unambiguous terminator.
            repeat(field("specifier", alias($.bare_id, $.function_specifier))),
            field("sym_name", $.symbol_ref_id),
            field("arguments", $.func_arg_list),
            field("return", optional($.func_return)),
            // Post-signature clauses parsed by LLVMFuncOp::parse, in source
            // order: vscale_range(min, max) then comdat(@selector).
            field("vscale_range", optional($.vscale_range)),
            field("comdat", optional($.comdat)),
            field(
              "attributes",
              optional(
                seq(optional(token("attributes")), $.dictionary_attribute),
              ),
            ),
            field("body", optional($.region)),
          ),
        ),
      ),

    // LLVM function post-signature clauses (LLVMFuncOp::parse). vscale_range
    // takes two i32 bounds; comdat takes a (possibly nested) symbol selector.
    custom_op_name: ($) =>
      choice($._dotted_op_name, $._bare_op_name, $.bare_id),
    _dotted_op_name: ($) =>
      token(
        prec(
          10,
          seq(
            /[a-zA-Z_]/,
            repeat(/[a-zA-Z0-9_$]/),
            repeat1(seq(".", /[a-zA-Z_]/, repeat(/[a-zA-Z0-9_$.]/))),
          ),
        ),
      ),
    // Bare operation names: spec-sanctioned no-prefix aliases only.
    // All other dialect ops go through _dotted_op_name or _generic_custom_operation.
    _bare_op_name: ($) =>
      token(
        prec(
          10,
          choice(
            "return",
            "call",
            "call_indirect",
            "constant",
            "unrealized_conversion_cast",
          ),
        ),
      ),

    // Structural body elements that can appear in custom operation format.
    // These are recognized by sigils (%,^,@,!,#) or by structural delimiters.
    block: ($) => seq($.block_label, repeat($.operation)),
    block_label: ($) => seq($._block_id, optional($.block_arg_list), ":"),
    _block_id: ($) => alias($._block_label_id, $.caret_id),
    caret_id: ($) => $._caret_id,
    _value_use_and_type_list: ($) =>
      seq($._value_use_and_type, repeat(seq(",", $._value_use_and_type))),
    block_arg_list: ($) => seq("(", optional($._value_use_and_type_list), ")"),
    region: ($) =>
      prec(1, seq("{", optional($.entry_block), repeat($.block), "}")),
    entry_block: ($) => repeat1($.operation),

    // =========================================================================
    // Types
    //   type ::= type-alias | dialect-type | builtin-type
    //   function-type ::= (type | type-list-parens) `->` (type | type-list-parens)
    // =========================================================================
    type: ($) => choice($.type_alias, $.dialect_type, $.builtin_type),
    _type_list_parens: ($) => seq("(", optional($._type_list_no_parens), ")"),
    function_type: ($) =>
      seq(choice($.type, $._type_list_parens), $._function_return),
    _function_return: ($) =>
      seq(token("->"), choice($.type, $._type_list_parens)),
    type_alias_def: ($) => seq("!", $._alias_or_dialect_id, "=", $.type),
    type_alias: ($) => seq("!", $._alias_or_dialect_id),

    // Dialect Types
    dialect_type: ($) =>
      seq(
        "!",
        choice(
          $.opaque_dialect_item,
          $.pretty_dialect_item,
          $.parametric_dialect_item,
        ),
      ),
    dialect_namespace: ($) => $._alias_or_dialect_id,
    dialect_ident: ($) => token(seq(/[a-zA-Z_]/, repeat(/[a-zA-Z0-9_$.-]/))),
    opaque_dialect_item: ($) =>
      prec(1, seq($.dialect_namespace, "<", $.string_literal, ">")),
    pretty_dialect_item: ($) =>
      seq(
        $.dialect_namespace,
        ".",
        $.dialect_ident,
        optional($.pretty_dialect_item_body),
      ),
    // Parametric dialect item: !namespace<...> or #namespace<...> without dot-separated ident
    parametric_dialect_item: ($) =>
      seq($.dialect_namespace, $.pretty_dialect_item_body),
    pretty_dialect_item_body: ($) =>
      seq("<", repeat($._pretty_dialect_item_contents), ">"),
    _pretty_dialect_item_contents: ($) =>
      prec.left(
        choice(
          $._pretty_dialect_structural_content,
          $._pretty_dialect_value_content,
          $._pretty_dialect_keyword_content,
          $._pretty_dialect_punctuation_content,
          token(prec(-1, /[^<>]/)),
        ),
      ),
    dimension_separator: ($) => token(prec(10, "x")),
    dialect_dim_list: ($) =>
      prec.dynamic(
        1,
        seq(
          $._dialect_dim_primitive,
          repeat1(seq($.dimension_separator, $._dialect_dim_primitive)),
        ),
      ),
    _dialect_dim_primitive: ($) =>
      choice(
        prec(1, $.type),
        prec(1, $._pretty_dialect_body_type),
        alias($.integer_literal, $.dimension_size),
        "?",
        "*",
      ),
    builtin_type: ($) =>
      choice(
        $.integer_type,
        $.float_type,
        $.complex_type,
        $.index_type,
        $.memref_type,
        $.none_type,
        $.token_type,
        $.tensor_type,
        $.vector_type,
        $.tuple_type,
        $.opaque_type,
      ),

    integer_type: ($) =>
      token(prec(5, seq(choice("si", "ui", "i"), /[0-9]/, repeat(/[0-9]/)))),
    float_type: ($) =>
      token(
        prec(
          5,
          choice(
            "f16",
            "tf32",
            "f32",
            "f64",
            "f80",
            "f128",
            "bf16",
            "f4E2M1FN",
            "f6E2M3FN",
            "f6E3M2FN",
            "f8E3M4",
            "f8E4M3",
            "f8E4M3FN",
            "f8E4M3FNUZ",
            "f8E4M3B11FNUZ",
            "f8E5M2",
            "f8E5M2FNUZ",
            "f8E5M3FNU",
            "f8E8M0FNU",
          ),
        ),
      ),
    index_type: ($) => token(prec(5, "index")),
    none_type: ($) => token(prec(5, "none")),
    token_type: ($) => token(prec(5, "token")),
    complex_type: ($) => seq($._complex_type_start, $._prim_type, ">"),
    _prim_type: ($) =>
      choice(
        $.integer_type,
        $.float_type,
        $.index_type,
        $.complex_type,
        $.none_type,
        $.token_type,
        $.memref_type,
        $.vector_type,
        $.tensor_type,
        $.tuple_type,
        $.opaque_type,
        $.dialect_type,
        $.type_alias,
      ),

    memref_type: ($) =>
      seq(
        token("memref"),
        "<",
        field("dimension_list", $.dim_list),
        optional(seq(",", $.attribute_value)),
        optional(seq(",", $.attribute_value)),
        ">",
      ),
    dim_list: ($) => seq($._dim_primitive, repeat(seq("x", $._dim_primitive))),
    // '*' represents the unranked form for both memref and tensor types
    // (UnrankedMemRefType, UnrankedTensorType). Vector uses its own
    // vector_dim_list and disallows '*' by construction.
    dimension_size: ($) => token(repeat1(/[0-9]/)),
    _dim_primitive: ($) => choice(prec(1, $.type), $.dimension_size, "?", "*"),

    tensor_type: ($) =>
      seq(
        token("tensor"),
        "<",
        $.dim_list,
        optional(seq(",", $.tensor_encoding)),
        ">",
      ),
    vector_type: ($) =>
      prec(
        1,
        seq(
          token("vector"),
          "<",
          optional($.vector_dim_list),
          $._prim_type,
          ">",
        ),
      ),
    vector_dim_list: ($) =>
      seq(
        $._vector_dimension,
        repeat(seq("x", $._vector_dimension)),
        "x",
      ),
    _vector_dimension: ($) =>
      choice($.dimension_size, seq("[", $.dimension_size, "]")),

    tuple_type: ($) =>
      seq(
        token("tuple"),
        "<",
        optional(seq($.tuple_dim, repeat(seq(",", $.tuple_dim)))),
        ">",
      ),
    tuple_dim: ($) => choice($._prim_type, $.function_type),

    // opaque-type ::= `opaque` `<` string-literal `,` string-literal `>`
    // e.g. opaque<"llvm", "struct<(i32, float)>">
    attribute_entry: ($) =>
      choice(
        seq(
          choice($.bare_id, $.string_literal),
          optional(seq("=", $.attribute_value)),
        ),
        // Array-valued entry (e.g. {["op.name"]} in transform dialect)
        $._attribute_array,
      ),
    attribute_value: ($) =>
      choice($._attribute_array, $._attribute_value_nobracket),
    _attribute_array: ($) =>
      seq(
        "[",
        optional($._attribute_array_element),
        repeat(seq(",", $._attribute_array_element)),
        "]",
      ),
    _attribute_value_nobracket: ($) =>
      choice(
        $.attribute_alias,
        $.dialect_attribute,
        $.builtin_attribute,
        $.dictionary_attribute,
        $._literal_and_type,
        $.type,
        $.function_type,
        $._affine_map_like,
        $.symbol_ref_id,
        $.trailing_location,
        seq(
          choice($.attribute_alias, $.dialect_attribute, $.builtin_attribute),
          $._type_annotation,
        ),
      ),
    attribute: ($) =>
      choice(
        $.attribute_alias,
        $.dialect_attribute,
        $.builtin_attribute,
        $.dictionary_attribute,
      ),

    // Attribute aliases
    dialect_attribute: ($) =>
      seq(
        "#",
        choice(
          $.opaque_dialect_item,
          $.pretty_dialect_item,
          $.parametric_dialect_item,
        ),
      ),

    // Builtin attributes
    func_return: ($) => seq(token("->"), $.type_list_attr_parens),
    func_arg_list: ($) =>
      seq(
        "(",
        optional(choice($.variadic, $._value_id_and_type_attr_list)),
        ")",
      ),
    _value_id_and_type_attr_list: ($) =>
      seq(
        $._value_id_and_type_attr,
        repeat(seq(",", choice($._value_id_and_type_attr, $.variadic))),
      ),
    _type_or_func_type: ($) => choice($.type, $.function_type),
    _value_use_list_parens: ($) => seq("(", optional($._value_use_list), ")"),

    // Comment (standard BCPL)
