test/corpus/01-types.txt
================================================================================
Tensor type of known dimensions
================================================================================
func.func @test_addi_tensor(%arg0 : tensor<8x8xi64>, %arg1 : tensor<8x8xi64>) -> tensor<8x8xi64> {
  %0 = arith.addi %arg0, %arg1 : tensor<8x8xi64>
  return %0 : tensor<8x8xi64>
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (tensor_type
                (dim_list
                  (dimension_size)
                  (dimension_size)
                  (type
                    (builtin_type
                      (integer_type)))))))
          (value_use)
          (type
            (builtin_type
              (tensor_type
                (dim_list
                  (dimension_size)
                  (dimension_size)
                  (type
                    (builtin_type
                      (integer_type))))))))
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (tensor_type
                  (dim_list
                    (dimension_size)
                    (dimension_size)
                    (type
                      (builtin_type
                        (integer_type)))))))))
        (region
          (entry_block
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (dimension_size)
                        (dimension_size)
                        (type
                          (builtin_type
                            (integer_type)))))))))
            (operation
              (custom_operation
                (custom_op_name)
                (value_use)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (dimension_size)
                        (dimension_size)
                        (type
                          (builtin_type
                            (integer_type)))))))))))))))

================================================================================
vector type with one dimension
================================================================================
func.func @test_addi_vector(%arg0 : vector<8xi64>, %arg1 : vector<8xi64>) -> vector<8xi64> {
  %0 = arith.addi %arg0, %arg1 : vector<8xi64>
  return %0 : vector<8xi64>
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (vector_type
                (vector_dim_list
                  (dimension_size))
                (integer_type))))
          (value_use)
          (type
            (builtin_type
              (vector_type
                (vector_dim_list
                  (dimension_size))
                (integer_type)))))
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (vector_type
                  (vector_dim_list
                    (dimension_size))
                  (integer_type))))))
        (region
          (entry_block
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size))
                      (integer_type))))))
            (operation
              (custom_operation
                (custom_op_name)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size))
                      (integer_type))))))))))))

================================================================================
vector type without dimensions
================================================================================
func.func @test_cmpi_vector_0d(%arg0 : vector<i64>, %arg1 : vector<i64>) -> vector<i1> {
  %0 = arith.cmpi ult, %arg0, %arg1 : vector<i64>
  return %0 : vector<i1>
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (vector_type
                (integer_type))))
          (value_use)
          (type
            (builtin_type
              (vector_type
                (integer_type)))))
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (vector_type
                  (integer_type))))))
        (region
          (entry_block
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (integer_type))))))
            (operation
              (custom_operation
                (custom_op_name)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (integer_type))))))))))))

================================================================================
vector type with multiple dimensions
================================================================================
func.func @cmpi_equal_vector_operands(%arg0: vector<1x8xi64>)
    -> (vector<1x8xi1>, vector<1x8xi1>, vector<1x8xi1>, vector<1x8xi1>,
        vector<1x8xi1>, vector<1x8xi1>, vector<1x8xi1>, vector<1x8xi1>,
	vector<1x8xi1>, vector<1x8xi1>) {
  %0 = arith.cmpi eq, %arg0, %arg0 : vector<1x8xi64>
  %1 = arith.cmpi sle, %arg0, %arg0 : vector<1x8xi64>
  %2 = arith.cmpi sge, %arg0, %arg0 : vector<1x8xi64>
  %3 = arith.cmpi ule, %arg0, %arg0 : vector<1x8xi64>
  %4 = arith.cmpi uge, %arg0, %arg0 : vector<1x8xi64>
  %5 = arith.cmpi ne, %arg0, %arg0 : vector<1x8xi64>
  %6 = arith.cmpi slt, %arg0, %arg0 : vector<1x8xi64>
  %7 = arith.cmpi sgt, %arg0, %arg0 : vector<1x8xi64>
  %8 = arith.cmpi ult, %arg0, %arg0 : vector<1x8xi64>
  %9 = arith.cmpi ugt, %arg0, %arg0 : vector<1x8xi64>
  return %0, %1, %2, %3, %4, %5, %6, %7, %8, %9
      : vector<1x8xi1>, vector<1x8xi1>, vector<1x8xi1>, vector<1x8xi1>,
        vector<1x8xi1>, vector<1x8xi1>, vector<1x8xi1>, vector<1x8xi1>,
	vector<1x8xi1>, vector<1x8xi1>
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (vector_type
                (vector_dim_list
                  (dimension_size)
                  (dimension_size))
                (integer_type)))))
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (vector_type
                  (vector_dim_list
                    (dimension_size)
                    (dimension_size))
                  (integer_type))))
            (type
              (builtin_type
                (vector_type
                  (vector_dim_list
                    (dimension_size)
                    (dimension_size))
                  (integer_type))))
            (type
              (builtin_type
                (vector_type
                  (vector_dim_list
                    (dimension_size)
                    (dimension_size))
                  (integer_type))))
            (type
              (builtin_type
                (vector_type
                  (vector_dim_list
                    (dimension_size)
                    (dimension_size))
                  (integer_type))))
            (type
              (builtin_type
                (vector_type
                  (vector_dim_list
                    (dimension_size)
                    (dimension_size))
                  (integer_type))))
            (type
              (builtin_type
                (vector_type
                  (vector_dim_list
                    (dimension_size)
                    (dimension_size))
                  (integer_type))))
            (type
              (builtin_type
                (vector_type
                  (vector_dim_list
                    (dimension_size)
                    (dimension_size))
                  (integer_type))))
            (type
              (builtin_type
                (vector_type
                  (vector_dim_list
                    (dimension_size)
                    (dimension_size))
                  (integer_type))))
            (type
              (builtin_type
                (vector_type
                  (vector_dim_list
                    (dimension_size)
                    (dimension_size))
                  (integer_type))))
            (type
              (builtin_type
                (vector_type
                  (vector_dim_list
                    (dimension_size)
                    (dimension_size))
                  (integer_type))))))
        (region
          (entry_block
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (bare_id)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))))
            (operation
              (custom_operation
                (custom_op_name)
                (value_use)
                (value_use)
                (value_use)
                (value_use)
                (value_use)
                (value_use)
                (value_use)
                (value_use)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size)
                        (dimension_size))
                      (integer_type))))))))))))

================================================================================
Scalable vector type
================================================================================
func.func @test_addi_scalable_vector(%arg0 : vector<[8]xi64>, %arg1 : vector<[8]xi64>)
  -> vector<[8]xi64> {
  %0 = arith.addi %arg0, %arg1 : vector<[8]xi64>
  return %0 : vector<[8]xi64>
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (vector_type
                (vector_dim_list
                  (dimension_size))
                (integer_type))))
          (value_use)
          (type
            (builtin_type
              (vector_type
                (vector_dim_list
                  (dimension_size))
                (integer_type)))))
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (vector_type
                  (vector_dim_list
                    (dimension_size))
                  (integer_type))))))
        (region
          (entry_block
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size))
                      (integer_type))))))
            (operation
              (custom_operation
                (custom_op_name)
                (value_use)
                (type
                  (builtin_type
                    (vector_type
                      (vector_dim_list
                        (dimension_size))
                      (integer_type))))))))))))

================================================================================
Scalable 2d vector with scalable dimensions
================================================================================
%scalable_vector_2d = "foo.op"() : () -> vector<[2]x[2]xf64>
--------------------------------------------------------------------------------

(toplevel
  (operation
    (op_result
      (value_use))
    (generic_operation
      (string_literal)
      (function_type
        (type
          (builtin_type
            (vector_type
              (vector_dim_list
                (dimension_size)
                (dimension_size))
              (float_type))))))))

================================================================================
Scalable vector with bf16
================================================================================
%scalable_vector_2d_mixed = "foo.op"() : () -> vector<2x[4]xbf16>
--------------------------------------------------------------------------------

(toplevel
  (operation
    (op_result
      (value_use))
    (generic_operation
      (string_literal)
      (function_type
        (type
          (builtin_type
            (vector_type
              (vector_dim_list
                (dimension_size)
                (dimension_size))
              (float_type))))))))

================================================================================
!llvm.ptr dialect type
================================================================================
llvm.func @byvalattr(%arg0: !llvm.ptr<i32> {llvm.byval}) {
  llvm.return
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (dialect_type
              (pretty_dialect_item
                (dialect_namespace)
                (dialect_ident)
                (pretty_dialect_item_body
                  (type
                    (builtin_type
                      (integer_type)))))))
          (attribute
            (dictionary_attribute
              (attribute_entry
                (bare_id)))))
        (region
          (entry_block
            (operation
              (custom_operation
                (custom_op_name)))))))))

================================================================================
Pretty dialect type with special body tokens
================================================================================
func.func @pretty_dialect_type_body_tokens() {
  %0 = "foo.unknown_op"() : () -> !foo.complextype<abcd<[f]$$[32]>>
  %1 = "foo.unknown_op"() : () -> !foo.dialect<!x@#!@#>
  return
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    rhs: (custom_operation
      (func_operation
        sym_name: (symbol_ref_id)
        arguments: (func_arg_list)
        body: (region
          (entry_block
            (operation
              lhs: (op_result
                (value_use))
              rhs: (generic_operation
                (string_literal)
                (function_type
                  (type
                    (dialect_type
                      (pretty_dialect_item
                        (dialect_namespace)
                        (dialect_ident)
                        (pretty_dialect_item_body
                          (bare_id)
                          (pretty_dialect_item_body
                            (bare_id)
                            (integer_literal)))))))))
            (operation
              lhs: (op_result
                (value_use))
              rhs: (generic_operation
                (string_literal)
                (function_type
                  (type
                    (dialect_type
                      (pretty_dialect_item
                        (dialect_namespace)
                        (dialect_ident)
                        (pretty_dialect_item_body
                          (type
                            (type_alias)))))))))
            (operation
              rhs: (custom_operation
                name: (custom_op_name)))))))))

================================================================================
Linalg matmul with memref of unknown dimensions
================================================================================
func.func @matmul(%arg0: memref<?xi8>, %M: index, %N: index, %K: index) {
  %c0 = arith.constant 0 : index
  %c1 = arith.constant 1 : index
  %A = memref.view %arg0[%c0][%M, %K] : memref<?xi8> to memref<?x?xf32>
  %B = memref.view %arg0[%c0][%K, %N] : memref<?xi8> to memref<?x?xf32>
  %C = memref.view %arg0[%c0][%M, %N] : memref<?xi8> to memref<?x?xf32>
  linalg.matmul ins(%A, %B: memref<?x?xf32>, memref<?x?xf32>)
                outs(%C: memref<?x?xf32>)
  return
}
--------------------------------------------------------------------------------
